body total overflow fixed

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,6 @@ body #root {
     'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  height: 100vh;
 }
 
 code {
